[package]
name = "dexter_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
tungstenite = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures = "0.3"
futures-util = "0.3"
url = "2.2"
uuid = { version = "1.2", features = ["v4"] }